Cooja: replace call to deprecated method
This way of calling newInstance() apparently
gives better compiler checking, and is not
deprecated.